--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -2,8 +2,8 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
 format = """
-[](fg:grey-x11 bg:term-bg)[](bg:grey-x11 fg:term-bg)\
-[](bg:grey-x11 fg:term-bg)\
+[](fg:grey-x11 bg:blk)[](bg:grey-x11 fg:blk)\
+[ ](bg:grey-x11 fg:blk)\
 [](bg:grey-x11 fg:blk)[](fg:grey-x11 bg:blk)\     
 $username$directory[](fg:dark-blue bold)\
 $python\
@@ -12,44 +12,37 @@ $git_branch\
 $git_status
 $memory_usage\
 $sudo\
-[   ](fg:227 bold)\
+[  \\$](fg:227 bold bg:blk)[](fg:blk)\
 """
 
-
 palette = 'foo'
-
-# right_format = """$cmd_duration"""
 
 # Inserts a blank line between shell prompts
 add_newline = false
 
 # icons:
 #     ░ ▒ ▓        
-#    ⏱     ﲵ     ﯈         ﴘ     ﱮ   ﮳ ﭱ     
-#  ﬌ 礼 祥 羽              
-#  ▓ █ 
+#    
 # █  
 
 
 [palettes.foo]
 grey-x11 = "#BFBDC1"
-lapis-lazuli = "#336699"
 dark-blue = "#1446A0"
 term-bg = "#252525"
 blk = "#000000"
 sudo-bg = "#BA160C"
 
 [username]
+format = "[ $user ]($style)[ ](fg:0 bg:dark-blue)"
 show_always = true
 style_root = "bg:blk fg:231"
 style_user = "bg:blk fg:15 bold"
-format = "[](fg:term-bg bg:blk)[$user]($style)[](bg:blk fg:dark-blue)[](fg:blk bg:dark-blue)"
 disabled = false
 
 [directory]
-style = "bg:dark-blue fg:231"
-format = '[$path]($style)[$read_only]($read_only_style)'
-# format = "[$path]($style)[ ](bg:24 fg:231 bold)"
+format = "[$path]($style)[$read_only]($read_only_style)"
+style = "bg:dark-blue fg:15"
 disabled = false
 truncate_to_repo = false
 truncation_length = 4
@@ -57,12 +50,11 @@ truncation_symbol = "…/"
 read_only = "  "
 
 [directory.substitutions]
-"Concurrent Programming - 7400" = "Concurrent Prog."
 "Downloads" = " "
 
 # Replace the "❯" symbol in the prompt with "➜"
-[character] # The name of the module we are configuring is "character"
-success_symbol = "[➜](bold green)" # The "success_symbol" segment is being set to "➜" with the color "bold green"
+[character]
+success_symbol = "[➜](bold green)"
 
 # Disable the package module, hiding it from the prompt completely
 [package]
@@ -176,6 +168,13 @@ format = '\[[$symbol($version)(\($switch_indicator$switch_name\))]($style)\]'
 [openstack]
 format = '\[[$symbol$cloud(\($project\))]($style)\]'
 
+[os]
+format = "[$symbol]($style)"
+style = "bg:grey-x11 fg:blk"
+disabled = true
+[os.symbols]
+Macos = " "
+
 [perl]
 format = '\[[$symbol($version)]($style)\]'
 
@@ -210,9 +209,7 @@ format = '\[[$symbol$environment]($style)\]'
 
 [sudo]
 format = '[$symbol]($style)'
-# format = '[](fg:#F5F0F6)[](fg:#BFBDC1)[$symbol]($style)[](fg:#BFBDC1)[](fg:#F5F0F6)'
 symbol = '🧙'
-# style = "bg:#BFBDC1"
 disabled = false
 
 [swift]
