--- a/config/helix/languages.toml
+++ b/config/helix/languages.toml
@@ -1,52 +1,13 @@
-[[language]]
-name = "toml"
-auto-format = true
-scope = "source.toml"
-injection-regex = "toml"
-file-types = ["toml"]
-roots = []
-comment-token = "#"
-language-server = { command = "taplo", args = ["lsp", "stdio"] }
-indent = { tab-width = 2, unit = "  " }
-
-# [[language]]
-# name = "rust"
-# scope = "source.rust"
-# injection-regex = "rust"
-# file-types = ["rs"]
-# roots = ["Cargo.toml", "Cargo.lock"]
-# auto-format = true
-# comment-token = "//"
-# language-server = { command = "rust-analyzer" }
-# indent = { tab-width = 4, unit = "    " }
-
-[[language]]
-name = "make"
-scope = "source.make"
-file-types = ["Makefile", "makefile", "mk", "Justfile", "justfile", ".justfile"]
-injection-regex = "(make|makefile|Makefile|mk|just)"
-roots = []
-comment-token = "#"
-indent = { tab-width = 4, unit = "\t" }
-
-[[language]]
-name = "c"
-scope = "source.c"
-injection-regex = "c"
-file-types = ["c"]                       # TODO: ["h"]
-roots = []
-comment-token = "//"
-language-server = { command = "clangd" }
-indent = { tab-width = 2, unit = "  " }
-
-[[language]]
-name = "cpp"
-auto-format = true
-file-types = ["cpp", "cxx", "h", "hpp"]
-indent = { tab-width = 2, unit = "  " }
+[language-server.pylsp]
+# pycodestyle = { ignore = ["W292", "W293", "E501", "E128"] }
 
 [[language]]
 name = "python"
+formatter = { command = "black", args = ["--preview", "--quiet", "-"] }
+# formatter = { command = "black", args = ["-"] }
 auto-format = true
-[language.config.pylsp.plugins]
-pycodestyle = { ignore =["W292","W293", "E501"]}
+
+[[language]]
+name = "toml"
+formatter = { command = "taplo", args = ["format", "-"] }
+auto-format = true
